--- a/tydzien/piatek.html
+++ b/tydzien/piatek.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-        <a href="../index.html">Główna</a>
-        <a href="poniedzialek.html">Poniedziałek</a>
-        <a href="wtorek.html">Wtorek</a>
-        <a href="sroda.html">Środa</a>
-        <a href="czwartek.html">Czwartek</a>
-        <a href="piatek.html">Piątek</a>
-        <a href="sobota.html">Sobota</a>
-        <a href="niedziela.html">Niedziela</a>
+        <a class="link" href="../index.html">Główna</a>
+        <a class="link" href="poniedzialek.html">Poniedziałek</a>
+        <a class="link" href="wtorek.html">Wtorek</a>
+        <a class="link" href="sroda.html">Środa</a>
+        <a class="link" href="czwartek.html">Czwartek</a>
+        <a class="link" href="piatek.html">Piątek</a>
+        <a class="link" href="sobota.html">Sobota</a>
+        <a class="link" href="niedziela.html">Niedziela</a>
     </header>
         
     <main>
         <article>
-            <h1 class="mainHeader">Piątek</h1>
+            <h1 class="heading">Piątek</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa veniam nulla consectetur velit voluptatibus mollitia dignissimos corrupti unde hic ut assumenda pariatur provident earum quas id, repellendus ducimus numquam cum.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem delectus sequi, inventore itaque quaerat qui ducimus dolor maxime voluptates amet magnam, dolore magni officia neque tempora, mollitia dicta labore ab?
