add style to all pages

--- a/tydzien/piatek.html
+++ b/tydzien/piatek.html
@@ -19,7 +19,7 @@
         <a class="link" href="niedziela.html">Niedziela</a>
     </header>
         
-    <main>
+    <main class="main">
         <article>
             <h1 class="heading">Piątek</h1>
             <p>
