--- a/index.html
+++ b/index.html
@@ -23,18 +23,21 @@
         <a class="link" href="tydzien/niedziela.html">Niedziela</a>
     </header>
 
-    <main>
+    <main class="main">
         <header>
             <h1 class="heading">
                 Łukasz - Strona domowa
             </h1>
         </header>
 
-        <section>
+        <section class="about">
             <h2 class="sectionHeader">
                 Kim jestem?
             </h2>
-            <p>
+            <p class="paragraph">
+                TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
+                TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
+                TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
                 TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
             </p>
             <a class="link" href="#pamietniczek">Przejdź do pamiętniczka</a>
@@ -113,7 +116,7 @@
     <footer>
         Łukasz Sokołek 2019
     </footer>
-    <script src="./src/js/witaj.js"></script>
+    <!--<script src="./src/js/witaj.js"></script>-->
 </body>
 
 </html>
