--- a/tydzien/niedziela.html
+++ b/tydzien/niedziela.html
@@ -19,7 +19,7 @@
         <a class="link" href="niedziela.html">Niedziela</a>
     </header>
         
-    <main>
+    <main class="main">
         <article>
             <h1 class="heading">Niedziela</h1>
             <p>
