add style to navigation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <header>
+    <header class="navigation">
         <a class="link" href="index.html">Główna</a>
         <a class="link" href="tydzien/poniedzialek.html">Poniedziałek</a>
         <a class="link" href="tydzien/wtorek.html">Wtorek</a>
