--- a/tydzien/sobota.html
+++ b/tydzien/sobota.html
@@ -8,7 +8,7 @@
     <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
+    <header class="navigation">
         <a class="link" href="../index.html">Główna</a>
         <a class="link" href="poniedzialek.html">Poniedziałek</a>
         <a class="link" href="wtorek.html">Wtorek</a>
