--- a/index.html
+++ b/index.html
@@ -13,110 +13,112 @@
 <body>
 
     <header class="navigation">
-        <a class="link" href="index.html">Główna</a>
-        <a class="link" href="tydzien/poniedzialek.html">Poniedziałek</a>
-        <a class="link" href="tydzien/wtorek.html">Wtorek</a>
-        <a class="link" href="tydzien/sroda.html">Środa</a>
-        <a class="link" href="tydzien/czwartek.html">Czwartek</a>
-        <a class="link" href="tydzien/piatek.html">Piątek</a>
-        <a class="link" href="tydzien/sobota.html">Sobota</a>
-        <a class="link" href="tydzien/niedziela.html">Niedziela</a>
+        <a class="navigation__link" href="index.html">Główna</a>
+        <a class="navigation__link" href="tydzien/poniedzialek.html">Poniedziałek</a>
+        <a class="navigation__link" href="tydzien/wtorek.html">Wtorek</a>
+        <a class="navigation__link" href="tydzien/sroda.html">Środa</a>
+        <a class="navigation__link" href="tydzien/czwartek.html">Czwartek</a>
+        <a class="navigation__link" href="tydzien/piatek.html">Piątek</a>
+        <a class="navigation__link" href="tydzien/sobota.html">Sobota</a>
+        <a class="navigation__link" href="tydzien/niedziela.html">Niedziela</a>
     </header>
 
-    <main class="main">
-        <header>
-            <h1 class="heading">
+    <main id="top" class="main">
+        <header class="header">
+            <h1 class="header__title">
                 Łukasz - Strona domowa
             </h1>
         </header>
 
         <section class="about">
-            <h2 class="sectionHeader">
+            <h2 class="about__header">
                 Kim jestem?
             </h2>
-            <p class="paragraph">
-                TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
-                TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
-                TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
-                TesterTester TesterTest erTesterTesterTesterTester TesterTe sterTesterTester Tester TesterTesterTesterTesterTesterTe sterTesterTesterTeste rTesterTesterTesterT 
+            <p class="about__paragraph">
+                <img src="src/img/01_cat.jpeg" alt="Koteł" class="about__picture"/>
+                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
+                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
+                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
+                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
             </p>
-            <a class="link" href="#pamietniczek">Przejdź do pamiętniczka</a>
+            <a class="about__link" href="#pamietniczek">Przejdź do pamiętniczka</a>
+            <p class="about__paragraph about__paragraph--mini about__paragraph--js"></p>
         </section>
 
-        <section id="pamietniczek">
-            <h2 class="diaryHeader">
+        <section class="diary" id="pamietniczek">
+            <h2 class="diary__header">
                 Pamiętniczek
             </h2>
-            <section>
-                <h3 class="thirdHeader">
+            <section class="day">
+                <h3 class="day__header">
                     Poniedziałek
                 </h3>
-                <p class="paragraph">
+                <p class="day__paragraph">
                     Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. <br>
-                    <a class="link" href="tydzien/poniedzialek.html">Pokaż opis mojego poniedziałku</a>
+                    <a class="day__link" href="tydzien/poniedzialek.html">Pokaż opis mojego poniedziałku</a>
                 </p>
             </section>
-            <section>
-                <h3 class="thirdHeader">
+            <section class="day">
+                <h3 class="day__header">
                     Wtorek
                 </h3>
-                <p class="paragraph">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="link" href="tydzien/wtorek.html".html">Pokaż opis mojego wtorku</a>
+                    <a class="day__link" href="tydzien/wtorek.html".html">Pokaż opis mojego wtorku</a>
                 </p>
             </section>
-            <section>
-                <h3 class="thirdHeader">
+            <section class="day">
+                <h3 class="day__header">
                     Środa
                 </h3>
-                <p class="paragraph">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="link" href="tydzien/sroda.html">Pokaż opis mojej środy</a>
+                    <a class="day__link" href="tydzien/sroda.html">Pokaż opis mojej środy</a>
                 </p>
             </section>
-            <section>
-                <h3 class="thirdHeader">
+            <section class="day">
+                <h3 class="day__header">
                     Czwartek
                 </h3>
-                <p class="paragraph">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="link" href="tydzien/czwartek.html">Pokaż opis mojego czwartku</a>
+                    <a class="day__link" href="tydzien/czwartek.html">Pokaż opis mojego czwartku</a>
                 </p>
             </section>
-            <section>
-                <h3 class="thirdHeader">
+            <section class="day">
+                <h3 class="day__header">
                     Piątek
                 </h3>
-                <p class="paragraph">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="link" href="tydzien/piatek.html">Pokaż opis mojego piątku</a>
+                    <a class="day__link" href="tydzien/piatek.html">Pokaż opis mojego piątku</a>
                 </p>
             </section>
-            <section>
-                <h3 class="thirdHeader">
+            <section class="day">
+                <h3 class="day__header day__header--weekend">
                     Sobota
                 </h3>
-                <p class="paragraph">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="link" href="tydzien/sobota.html">Pokaż opis mojej soboty</a>
+                    <a class="day__link" href="tydzien/sobota.html">Pokaż opis mojej soboty</a>
                 </p>
             </section>
-            <section>
-                <h3 class="thirdHeader">
+            <section class="day">
+                <h3 class="day__header day__header--weekend">
                     Niedziela
                 </h3>
-                <p class="paragraph">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="link" href="tydzien/niedziela.html">Pokaż opis mojej niedzieli</a>
+                    <a class="day__link" href="tydzien/niedziela.html">Pokaż opis mojej niedzieli</a>
                 </p>
             </section>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         Łukasz Sokołek 2019
     </footer>
-    <!--<script src="./src/js/witaj.js"></script>-->
+    <script src="./src/js/witaj.js"></script>
 </body>
 
 </html>
