feat: fix css style link in home page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    
+    <link href="./src/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -35,11 +34,10 @@
                 Kim jestem?
             </h2>
             <p class="about__paragraph">
-                <img src="src/img/01_cat.jpeg" alt="Koteł" class="about__picture"/>
-                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
-                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
-                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
-                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT 
+                <img src="src/img/01_cat.jpeg" alt="Koteł" class="about__picture" /> Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester
+                Tester Testerste rTester Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester
+                Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT
+                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT
             </p>
             <a class="about__link" href="#pamietniczek">Przejdź do pamiętniczka</a>
             <p class="about__paragraph about__paragraph--mini about__paragraph--js"></p>
@@ -64,61 +62,61 @@
                 </h3>
                 <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href="tydzien/wtorek.html".html">Pokaż opis mojego wtorku</a>
+                    <a class="day__link" href="tydzien/wtorek.html" .html ">Pokaż opis mojego wtorku</a>
                 </p>
             </section>
-            <section class="day">
-                <h3 class="day__header">
+            <section class="day ">
+                <h3 class="day__header ">
                     Środa
                 </h3>
-                <p class="day__paragraph">
+                <p class="day__paragraph ">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href="tydzien/sroda.html">Pokaż opis mojej środy</a>
+                    <a class="day__link " href="tydzien/sroda.html ">Pokaż opis mojej środy</a>
                 </p>
             </section>
-            <section class="day">
-                <h3 class="day__header">
+            <section class="day ">
+                <h3 class="day__header ">
                     Czwartek
                 </h3>
-                <p class="day__paragraph">
+                <p class="day__paragraph ">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href="tydzien/czwartek.html">Pokaż opis mojego czwartku</a>
+                    <a class="day__link " href="tydzien/czwartek.html ">Pokaż opis mojego czwartku</a>
                 </p>
             </section>
-            <section class="day">
-                <h3 class="day__header">
+            <section class="day ">
+                <h3 class="day__header ">
                     Piątek
                 </h3>
-                <p class="day__paragraph">
+                <p class="day__paragraph ">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href="tydzien/piatek.html">Pokaż opis mojego piątku</a>
+                    <a class="day__link " href="tydzien/piatek.html ">Pokaż opis mojego piątku</a>
                 </p>
             </section>
-            <section class="day">
-                <h3 class="day__header day__header--weekend">
+            <section class="day ">
+                <h3 class="day__header day__header--weekend ">
                     Sobota
                 </h3>
-                <p class="day__paragraph">
+                <p class="day__paragraph ">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href="tydzien/sobota.html">Pokaż opis mojej soboty</a>
+                    <a class="day__link " href="tydzien/sobota.html ">Pokaż opis mojej soboty</a>
                 </p>
             </section>
-            <section class="day">
-                <h3 class="day__header day__header--weekend">
+            <section class="day ">
+                <h3 class="day__header day__header--weekend ">
                     Niedziela
                 </h3>
-                <p class="day__paragraph">
+                <p class="day__paragraph ">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href="tydzien/niedziela.html">Pokaż opis mojej niedzieli</a>
+                    <a class="day__link " href="tydzien/niedziela.html ">Pokaż opis mojej niedzieli</a>
                 </p>
             </section>
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer ">
         Łukasz Sokołek 2019
     </footer>
-    <script src="./src/js/witaj.js"></script>
+    <script src="./src/js/witaj.js "></script>
 </body>
 
 </html>
