--- a/index.html
+++ b/index.html
@@ -7,19 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="./src/css/style.css" rel="stylesheet" type="text/css">
+    <link href="./src/css/normalize.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-    <header class="navigation">
-        <a class="navigation__link" href="index.html">Główna</a>
-        <a class="navigation__link" href="tydzien/poniedzialek.html">Poniedziałek</a>
-        <a class="navigation__link" href="tydzien/wtorek.html">Wtorek</a>
-        <a class="navigation__link" href="tydzien/sroda.html">Środa</a>
-        <a class="navigation__link" href="tydzien/czwartek.html">Czwartek</a>
-        <a class="navigation__link" href="tydzien/piatek.html">Piątek</a>
-        <a class="navigation__link" href="tydzien/sobota.html">Sobota</a>
-        <a class="navigation__link" href="tydzien/niedziela.html">Niedziela</a>
+    <header class="site-header">
+        <nav class="navigation">
+            <ul class="navigation__list">
+                <li class="navigation__item">
+                    <a class="navigation__link" href="index.html">Główna</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="tydzien/poniedzialek.html">Poniedziałek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="tydzien/wtorek.html">Wtorek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="tydzien/sroda.html">Środa</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="tydzien/czwartek.html">Czwartek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="tydzien/piatek.html">Piątek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="tydzien/sobota.html">Sobota</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="tydzien/niedziela.html">Niedziela</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main id="top" class="main">
@@ -34,10 +55,18 @@
                 Kim jestem?
             </h2>
             <p class="about__paragraph">
-                <img src="src/img/01_cat.jpeg" alt="Koteł" class="about__picture" /> Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester
-                Tester Testerste rTester Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester
-                Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT
-                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester Tester TesterT
+                <img src="src/img/01_cat.jpeg" alt="Koteł" class="about__picture" /> Tester Tester Tester Testerst
+                erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester
+                Tester Tester TesterTe sterTester
+                Tester Testerste rTester Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester
+                Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe
+                sterTester Tester Testerste rTester
+                Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester
+                sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste
+                rTester Tester Tester TesterT
+                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester
+                Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester
+                Tester TesterT
             </p>
             <a class="about__link" href="#pamietniczek">Przejdź do pamiętniczka</a>
             <p class="about__paragraph about__paragraph--mini about__paragraph--js"></p>
@@ -52,7 +81,9 @@
                     Poniedziałek
                 </h3>
                 <p class="day__paragraph">
-                    Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. <br>
+                    Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego
+                    HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie
+                    prostego HTML'a. <br>
                     <a class="day__link" href="tydzien/poniedzialek.html">Pokaż opis mojego poniedziałku</a>
                 </p>
             </section>
@@ -61,62 +92,63 @@
                     Wtorek
                 </h3>
                 <p class="day__paragraph">
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
+                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF.
+                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
                     <a class="day__link" href="tydzien/wtorek.html" .html ">Pokaż opis mojego wtorku</a>
                 </p>
             </section>
-            <section class="day ">
-                <h3 class="day__header ">
+            <section class="day">
+                <h3 class="day__header">
                     Środa
                 </h3>
-                <p class="day__paragraph ">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link " href="tydzien/sroda.html ">Pokaż opis mojej środy</a>
+                    <a class="day__link" href=" tydzien/sroda.html ">Pokaż opis mojej środy</a>
                 </p>
             </section>
-            <section class="day ">
-                <h3 class="day__header ">
+            <section class="day">
+                <h3 class="day__header">
                     Czwartek
                 </h3>
-                <p class="day__paragraph ">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link " href="tydzien/czwartek.html ">Pokaż opis mojego czwartku</a>
+                    <a class="day__link" href=" tydzien/czwartek.html ">Pokaż opis mojego czwartku</a>
                 </p>
             </section>
-            <section class="day ">
-                <h3 class="day__header ">
+            <section class="day">
+                <h3 class="day__header">
                     Piątek
                 </h3>
-                <p class="day__paragraph ">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link " href="tydzien/piatek.html ">Pokaż opis mojego piątku</a>
+                    <a class="day__link" href=" tydzien/piatek.html ">Pokaż opis mojego piątku</a>
                 </p>
             </section>
-            <section class="day ">
-                <h3 class="day__header day__header--weekend ">
+            <section class="day">
+                <h3 class="day__headerday__header--weekend ">
                     Sobota
                 </h3>
-                <p class="day__paragraph ">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link " href="tydzien/sobota.html ">Pokaż opis mojej soboty</a>
+                    <a class="day__link" href=" tydzien/sobota.html ">Pokaż opis mojej soboty</a>
                 </p>
             </section>
-            <section class="day ">
-                <h3 class="day__header day__header--weekend ">
+            <section class="day">
+                <h3 class="day__headerday__header--weekend ">
                     Niedziela
                 </h3>
-                <p class="day__paragraph ">
+                <p class="day__paragraph">
                     Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link " href="tydzien/niedziela.html ">Pokaż opis mojej niedzieli</a>
+                    <a class="day__link" href=" tydzien/niedziela.html ">Pokaż opis mojej niedzieli</a>
                 </p>
             </section>
         </section>
     </main>
 
-    <footer class="footer ">
+    <footer class=" footer ">
         Łukasz Sokołek 2019
     </footer>
-    <script src="./src/js/witaj.js "></script>
+    <!--<script src=" ./src/js/witaj.js "></script>-->
 </body>
 
 </html>
