--- a/tydzien/czwartek.html
+++ b/tydzien/czwartek.html
@@ -11,32 +11,68 @@
 </head>
 
 <body>
-    <header class="navigation">
-        <a class="navigation__link" href="../index.html">Główna</a>
-        <a class="navigation__link" href="poniedzialek.html">Poniedziałek</a>
-        <a class="navigation__link" href="wtorek.html">Wtorek</a>
-        <a class="navigation__link" href="sroda.html">Środa</a>
-        <a class="navigation__link" href="czwartek.html">Czwartek</a>
-        <a class="navigation__link" href="piatek.html">Piątek</a>
-        <a class="navigation__link" href="sobota.html">Sobota</a>
-        <a class="navigation__link" href="niedziela.html">Niedziela</a>
+
+    <header class="site-header">
+        <nav class="navigation">
+            <ul class="navigation__list">
+                <li class="navigation__item">
+                    <a class="navigation__link" href="../index.html">Główna</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="poniedzialek.html">Poniedziałek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="wtorek.html">Wtorek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="sroda.html">Środa</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="czwartek.html">Czwartek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="piatek.html">Piątek</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="sobota.html">Sobota</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="niedziela.html">Niedziela</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main class="main">
         <article class="article">
             <h1 class="article__title">Czwartek</h1>
             <p class="article__paragraph">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa veniam nulla consectetur velit voluptatibus mollitia dignissimos corrupti unde hic ut assumenda pariatur provident earum quas id, repellendus ducimus numquam cum. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Autem delectus sequi, inventore itaque quaerat qui ducimus dolor maxime voluptates amet magnam, dolore magni officia neque tempora, mollitia dicta labore ab? Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Animi facere deserunt error. Quisquam possimus iste non id at error soluta eum aliquam recusandae commodi cum, illo totam dicta distinctio pariatur? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa inventore itaque
-                doloremque dolores earum consequuntur minus quo nisi consequatur? Ea distinctio aliquid nostrum odit sed ut. Fuga voluptates quam harum?
-                <img src="../src/img/01_cat.jpeg" alt="zdjęcie kota" class="article__picture article__picture--right"><img>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa veniam nulla consectetur velit
+                voluptatibus mollitia dignissimos corrupti unde hic ut assumenda pariatur provident earum quas id,
+                repellendus ducimus numquam cum. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Autem delectus sequi, inventore itaque quaerat qui ducimus dolor maxime
+                voluptates amet magnam, dolore magni officia neque tempora, mollitia dicta labore ab? Lorem ipsum dolor
+                sit amet consectetur adipisicing
+                elit. Animi facere deserunt error. Quisquam possimus iste non id at error soluta eum aliquam recusandae
+                commodi cum, illo totam dicta distinctio pariatur? Lorem ipsum dolor sit amet consectetur, adipisicing
+                elit. Ipsa inventore itaque
+                doloremque dolores earum consequuntur minus quo nisi consequatur? Ea distinctio aliquid nostrum odit sed
+                ut. Fuga voluptates quam harum?
+                <img src="../src/img/01_cat.jpeg" alt="zdjęcie kota"
+                    class="article__picture article__picture--right"><img>
             </p>
             <p class="article__paragraph">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa veniam nulla consectetur velit voluptatibus mollitia dignissimos corrupti unde hic ut assumenda pariatur provident earum quas id, repellendus ducimus numquam cum. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Autem delectus sequi, inventore itaque quaerat qui ducimus dolor maxime voluptates amet magnam, dolore magni officia neque tempora, mollitia dicta labore ab? Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Animi facere deserunt error. Quisquam possimus iste non id at error soluta eum aliquam recusandae commodi cum, illo totam dicta distinctio pariatur? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa inventore itaque
-                doloremque dolores earum consequuntur minus quo nisi consequatur? Ea distinctio aliquid nostrum odit sed ut. Fuga voluptates quam harum?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa veniam nulla consectetur velit
+                voluptatibus mollitia dignissimos corrupti unde hic ut assumenda pariatur provident earum quas id,
+                repellendus ducimus numquam cum. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Autem delectus sequi, inventore itaque quaerat qui ducimus dolor maxime
+                voluptates amet magnam, dolore magni officia neque tempora, mollitia dicta labore ab? Lorem ipsum dolor
+                sit amet consectetur adipisicing
+                elit. Animi facere deserunt error. Quisquam possimus iste non id at error soluta eum aliquam recusandae
+                commodi cum, illo totam dicta distinctio pariatur? Lorem ipsum dolor sit amet consectetur, adipisicing
+                elit. Ipsa inventore itaque
+                doloremque dolores earum consequuntur minus quo nisi consequatur? Ea distinctio aliquid nostrum odit sed
+                ut. Fuga voluptates quam harum?
             </p>
             <footer class="article__footer">
                 Autorem artykułu jest Lorm ipsum
