--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="site-header">
         <nav class="navigation">
-            <ul class="navigation__list">
+            <ul class="navigation__list navigation__list--js">
                 <li class="navigation__item">
                     <a class="navigation__link" href="index.html">Główna</a>
                 </li>
@@ -41,6 +41,9 @@
                 </li>
             </ul>
         </nav>
+
+        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation">+</button>
+
     </header>
 
     <main id="top" class="main">
@@ -148,7 +151,7 @@
     <footer class=" footer ">
         Łukasz Sokołek 2019
     </footer>
-    <!--<script src=" ./src/js/witaj.js "></script>-->
+    <script src=" ./src/js/witaj.js "></script>
 </body>
 
 </html>
