Add grid to homepage and changes color

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             </ul>
         </nav>
 
-        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation">+</button>
+        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation"><b>+</b></button>
 
     </header>
 
     <main id="top" class="main">
         <header class="header">
             <h1 class="header__title">
-                Łukasz - Strona domowa
+                Smerek - Strona domowa
             </h1>
         </header>
 
@@ -58,23 +58,17 @@
                 Kim jestem?
             </h2>
             <p class="about__paragraph">
-                <img src="src/img/01_cat.jpeg" alt="Koteł" class="about__picture" /> Tester Tester Tester Testerst
-                erTester Tester Tester Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester
-                Tester Tester TesterTe sterTester
-                Tester Testerste rTester Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester
-                Tester Tester Tester Tester sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe
-                sterTester Tester Testerste rTester
-                Tester Tester TesterT Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester
-                sterTester Tester Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste
-                rTester Tester Tester TesterT
-                Tester Tester Tester Testerst erTester Tester Tester Tester Tester Tester Tester sterTester Tester
-                Tester Tester Tester Tester Tester Tester Tester TesterTe sterTester Tester Testerste rTester Tester
-                Tester TesterT
+                <img src="src/img/01_cat.jpeg" alt="Koteł" class="about__picture" />Ten kot pojawił się na świecie 2
+                września 2018.
+                Od 2 grudnia 2018 roku jest właścicielem niejakiego Łukasza. Wymusza on na posiadanym obiekcie
+                dostarczanie pożywienia, które uwielbia. Ulubione rozrywki owego kota nie różnią się od innych kotów,
+                gdyż
+                są to: jedzenie, zabawa, spanie (kolejność przypadkowa, zależna od tego kogo chce się wyprowadzić z
+                równowagi).
             </p>
             <a class="about__link" href="#pamietniczek">Przejdź do pamiętniczka</a>
             <p class="about__paragraph about__paragraph--mini about__paragraph--js"></p>
         </section>
-
         <section class="diary" id="pamietniczek">
             <h2 class="diary__header">
                 Pamiętniczek
@@ -84,9 +78,8 @@
                     Poniedziałek
                 </h3>
                 <p class="day__paragraph">
-                    Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego
-                    HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie prostego HTML'a. Tworzenie
-                    prostego HTML'a. <br>
+                    Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie,
+                    spanie. <br>
                     <a class="day__link" href="tydzien/poniedzialek.html">Pokaż opis mojego poniedziałku</a>
                 </p>
             </section>
@@ -95,9 +88,9 @@
                     Wtorek
                 </h3>
                 <p class="day__paragraph">
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF.
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href="tydzien/wtorek.html" .html ">Pokaż opis mojego wtorku</a>
+                    Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie,
+                    spanie. <br>
+                    <a class="day__link" href="tydzien/wtorek.html">Pokaż opis mojego wtorku</a>
                 </p>
             </section>
             <section class="day">
@@ -105,8 +98,9 @@
                     Środa
                 </h3>
                 <p class="day__paragraph">
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
-                    <a class="day__link" href=" tydzien/sroda.html ">Pokaż opis mojej środy</a>
+                    Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie,
+                    spanie. <br>
+                    <a class="day__link" href="tydzien/sroda.html">Pokaż opis mojego wtorku</a>
                 </p>
             </section>
             <section class="day">
@@ -114,7 +108,8 @@
                     Czwartek
                 </h3>
                 <p class="day__paragraph">
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
+                    Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie,
+                    spanie. <br>
                     <a class="day__link" href=" tydzien/czwartek.html ">Pokaż opis mojego czwartku</a>
                 </p>
             </section>
@@ -123,25 +118,28 @@
                     Piątek
                 </h3>
                 <p class="day__paragraph">
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
+                    Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie,
+                    spanie. <br>
                     <a class="day__link" href=" tydzien/piatek.html ">Pokaż opis mojego piątku</a>
                 </p>
             </section>
             <section class="day">
-                <h3 class="day__headerday__header--weekend ">
+                <h3 class="day__header day__header--weekend ">
                     Sobota
                 </h3>
                 <p class="day__paragraph">
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
+                    Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie,
+                    spanie. <br>
                     <a class="day__link" href=" tydzien/sobota.html ">Pokaż opis mojej soboty</a>
                 </p>
             </section>
             <section class="day">
-                <h3 class="day__headerday__header--weekend ">
+                <h3 class="day__header day__header--weekend ">
                     Niedziela
                 </h3>
                 <p class="day__paragraph">
-                    Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. Stworzone podczas szkolenia WTF. <br>
+                    Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie, spanie. Jedzenie, piecie,
+                    spanie. <br>
                     <a class="day__link" href=" tydzien/niedziela.html ">Pokaż opis mojej niedzieli</a>
                 </p>
             </section>
