Added navigation switcher to sub-pages

--- a/tydzien/czwartek.html
+++ b/tydzien/czwartek.html
@@ -14,7 +14,7 @@
 
     <header class="site-header">
         <nav class="navigation">
-            <ul class="navigation__list">
+            <ul class="navigation__list navigation__list--js">
                 <li class="navigation__item">
                     <a class="navigation__link" href="../index.html">Główna</a>
                 </li>
@@ -41,6 +41,8 @@
                 </li>
             </ul>
         </nav>
+
+        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation"><b>+</b></button>
     </header>
 
     <main class="main">
@@ -84,6 +86,8 @@
     <footer class="footer">
         Łukasz Sokołek 2019
     </footer>
+
+    <script src=" ../src/js/witaj.js "></script>
 
 </body>
 
