--- a/tydzien/wtorek.html
+++ b/tydzien/wtorek.html
@@ -14,7 +14,7 @@
 
     <header class="site-header">
         <nav class="navigation">
-            <ul class="navigation__list">
+            <ul class="navigation__list navigation__list--js">
                 <li class="navigation__item">
                     <a class="navigation__link" href="../index.html">Główna</a>
                 </li>
@@ -40,6 +40,7 @@
                     <a class="navigation__link" href="niedziela.html">Niedziela</a>
                 </li>
             </ul>
+            <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation"><b>+</b></button>
         </nav>
     </header>
 
@@ -85,6 +86,8 @@
     <footer class="footer">
         Łukasz Sokołek 2019
     </footer>
+
+    <script src=" ../src/js/witaj.js "></script>
 
 </body>
 
