Add hamburger to navigation button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
         </nav>
 
-        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation"><b>+</b></button>
+        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation">&#9776</button>
 
     </header>
 
