--- a/tydzien/wtorek.html
+++ b/tydzien/wtorek.html
@@ -40,7 +40,7 @@
                     <a class="navigation__link" href="niedziela.html">Niedziela</a>
                 </li>
             </ul>
-            <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation"><b>+</b></button>
+            <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation">&#9776</button>
         </nav>
     </header>
 
