--- a/tydzien/piatek.html
+++ b/tydzien/piatek.html
@@ -41,7 +41,7 @@
                 </li>
             </ul>
         </nav>
-        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation"><b>+</b></button>
+        <button class="navigation__switcher navigation__switcher--js" aria-label="Open the navigation">&#9776</button>
     </header>
 
     <main class="main">
